--- a/20230427_project/css/style.css
+++ b/20230427_project/css/style.css
@@ -1,8 +1,8 @@
-@import url(/css/reset.css);
+@import url(css/reset.css);
 
 
 body{
-    background-image: url(/img/htmlbgifixed.png);
+    background-image: url(img/htmlbgifixed.png);
     font-family: "duckie", sans-serif;
     font-weight: 400;
     font-style: normal;
