--- a/PersonalWeb/css/style.css
+++ b/PersonalWeb/css/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-image: url(/img/htmlbgifixed.png);
+    background-image: url(img/htmlbgifixed.png);
     font-family: "duckie", sans-serif;
     font-weight: 400;
     font-style: normal;
